@@ -1,3 +1,11 @@
+2007-07-12  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.03)
+
+	* POSIX.pm: Updated various stuff in the docs
+	* POSIX.xs: Now supports split // and m//g (always sets rx->offs correctly)
+	* t/s.t, t/split.t, t/subexp.t: Modified test from ::PCRE
+	* t/split-null.t: Failing test for split //
+	* META.yml: Literal encoding for author name
+
 2007-07-11  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.02)
 
 	* Makefile.PL: Minor cleanup
